updated readme to reflect uncovered bug

--- a/chessts/game/static/game/board.css
+++ b/chessts/game/static/game/board.css
@@ -24,9 +24,9 @@ body {
     /* #ffc886, rgb(255, 145, 20), #f83600 */
     background: white; 
     background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab); 
-    background: linear-gradient(to right, rgb(255, 217, 136), rgb(255,145,20), #f83600); 
+    /* background: linear-gradient(to right, rgb(255, 217, 136), rgb(255,145,20), #f83600);  */
     /* background: linear-gradient(to right, #b6b6b6, white, #b6b6b6);  */
-    /* background: linear-gradient(to right, #43cea2, #185a9d);  */
+    background: linear-gradient(to right, #43cea2, #185a9d); 
 
 }
 
